# FastTune

./: LICENSE.md  README.md
pitch/: CMakeLists.txt  _pitch_cep.c  _pitch_cep.h  _pitch_hps.c  _pitch_hps.h  _pitch_lhs.c  _pitch_lhs.h  _pitch_ncf.c  _pitch_ncf.h  _pitch_pef.c  _pitch_pef.h  _pitch_yin.c  flux_base.h  harmonicRatio_algorithm.c  harmonicRatio_algorithm.h
pitch/dsp/: conv_algorithm.c  conv_algorithm.h  flux_window.c  flux_window.h  xcorr_algorithm.c
pitch/util/: flux_util.c  flux_util.h
pitch/vector/: flux_vector.c
scripts/: build_android.sh  build_iOS.sh  build_linux.sh  build_macOS.sh  build_wasm.sh  build_windows.sh
test/: test1.h  testPitch.c
tools/: pitch.py
